--- a/WebContent/app/views/partials/docente/partialDocenteInfoAdministrativa.html
+++ b/WebContent/app/views/partials/docente/partialDocenteInfoAdministrativa.html
@@ -6,56 +6,72 @@
 		<!-- Legajo -->
 		<div class="row">
 			<div class="col-sm-4">
-				<div class="form-group">
-					<label for="nroLegajo">Legajo</label>
-					<input type="text" class="form-control" id="nroLegajo" name="nroLegajo" ng-model="infoAdministrativa.nroLegajo" maxlength="8" placeholder="Legajo">
+				<div class="form-group form-group-sm">
+					<label for="nroLegajo">Legajo</label> <input type="text"
+						class="form-control" id="nroLegajo" name="nroLegajo"
+						ng-model="infoAdministrativa.nroLegajo" maxlength="8"
+						placeholder="Legajo">
 				</div>
 			</div>
 		</div>
 		<!-- Fecha Alta y Antiguedad -->
 		<div class="row">
 			<div class="col-sm-4">
-				<div class="form-group form-inline">
+				<div class="form-group form-group-sm form-inline">
 					<div class="form-group">
-						<label for="fechaAlta" class="control-label pull-left">Fecha de Alta</label>
+						<label for="fechaAlta" class="control-label pull-left">Fecha
+							de Alta</label>
 					</div>
 					<div class="form-group form-inline">
-			            <p class="input-group">
-			              <input ng-change="actualizarAntiguedad(infoAdministrativa.fechaAlta)" type="text" class="form-control" datepicker-popup="{{format}}" 
-			              ng-model="infoAdministrativa.fechaAlta" is-open="openedFechaAlta" max-date="maxDate" datepicker-options="dateOptions" ng-required="true" 
-			              clear-text="Borrar" current-text="Hoy" close-text="Cerrar" disabled/>
-			              <span class="input-group-btn">
-			              	<button type="button" class="btn btn-default" ng-click="openFechaAlta($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-			              </span>
-			            </p>
+						<p class="input-group input-group-sm">
+							<input
+								ng-change="actualizarAntiguedad(infoAdministrativa.fechaAlta)"
+								type="text" class="form-control" datepicker-popup="{{format}}"
+								ng-model="infoAdministrativa.fechaAlta"
+								is-open="openedFechaAlta" max-date="maxDate"
+								datepicker-options="dateOptions" ng-required="true"
+								clear-text="Borrar" current-text="Hoy" close-text="Cerrar"
+								disabled /> <span class="input-group-btn">
+								<button type="button" class="btn btn-default"
+									ng-click="openFechaAlta($event)">
+									<i class="glyphicon glyphicon-calendar"></i>
+								</button>
+							</span>
+						</p>
 					</div>
 				</div>
-			</div>
-			<div class="col-sm-3">
-				<div class="form-group">
+				<!-- 			</div> -->
+				<!-- 			<div class="col-sm-3"> -->
+				<div class="form-group form-group-sm">
 					<label></label>
-					<div class="input-group">
-				      	<div class="input-group-addon">Antigüedad: </div>
-				      	<input type="text" class="form-control text-right" id="antiguedad" value="{{antiguedad}}" disabled>
-				      	<div class="input-group-addon">Años</div>
-				    </div>
+					<div class="input-group input-group-sm">
+						<div class="input-group-addon">Antigüedad:</div>
+						<input type="text" class="form-control text-right" id="antiguedad"
+							value="{{antiguedad}}" disabled>
+						<div class="input-group-addon">Años</div>
+					</div>
 				</div>
 			</div>
 		</div>
 		<!-- Tipo de Personal y Tipo Situacion Revista -->
 		<div class="row">
 			<div class="col-sm-4">
-				<div class="form-group">
-					<label>Personal</label>
-					<select class="form-control" ng-change="activarSituacionRevista(tipoPersonalSel)" ng-options="tipo.nombre for tipo in tiposPersonal" required ng-model="tipoPersonalSel" ng-init="listarTiposPersonal()">
+				<div class="form-group form-group-sm">
+					<label>Personal</label> <select class="form-control"
+						ng-change="activarSituacionRevista(tipoPersonalSel)"
+						ng-options="tipo.nombre for tipo in tiposPersonal" required
+						ng-model="tipoPersonalSel" ng-init="listarTiposPersonal()">
 						<option value="">-- Tipo de Personal --</option>
 					</select>
 				</div>
 			</div>
 			<div class="col-sm-5">
-				<div class="form-group" ng-show="situacionRevistaActivo">
-					<label>Situacion Revista</label>
-					<select class="form-control" ng-options="tipo.nombre for tipo in tiposSituacionRevista" required ng-model="tipoSituacionRevistaSel" ng-init="listarTiposSituacionRevista()">
+				<div class="form-group form-group-sm"
+					ng-show="situacionRevistaActivo">
+					<label>Situacion Revista</label> <select class="form-control"
+						ng-options="tipo.nombre for tipo in tiposSituacionRevista"
+						required ng-model="tipoSituacionRevistaSel"
+						ng-init="listarTiposSituacionRevista()">
 						<option value="">-- Tipo de Situacion de Revista --</option>
 					</select>
 				</div>
@@ -64,57 +80,78 @@
 		<!-- Tipo de Situacion Actual, Motivo y Fecha de Motivo -->
 		<div class="row">
 			<div class="col-sm-4">
-				<div class="form-group">
-					<label>Situacion Actual</label>
-					<select class="form-control" ng-change="activarMotivo(tipoSituacionActualSel)" ng-options="tipo.nombre for tipo in tiposSituacionActual" required ng-model="tipoSituacionActualSel" ng-init="listarTiposSituacionActual()">
+				<div class="form-group form-group-sm">
+					<label>Situacion Actual</label> <select class="form-control"
+						ng-change="activarMotivo(tipoSituacionActualSel)"
+						ng-options="tipo.nombre for tipo in tiposSituacionActual" required
+						ng-model="tipoSituacionActualSel"
+						ng-init="listarTiposSituacionActual()">
 						<option value="">-- Tipo de Situacion Actual --</option>
 					</select>
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<div class="form-group" ng-show="motivoActivo">
-					<label>Motivo</label>
-					<select class="form-control" ng-options="tipo.nombre for tipo in tiposMotivo" required ng-model="tipoMotivoSel" ng-init="listarTiposMotivo()">
+				<div class="form-group form-group-sm" ng-show="motivoActivo">
+					<label>Motivo</label> <select class="form-control"
+						ng-options="tipo.nombre for tipo in tiposMotivo" required
+						ng-model="tipoMotivoSel" ng-init="listarTiposMotivo()">
 						<option value="">-- Tipo de Motivo --</option>
 					</select>
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<div class="form-group form-inline" ng-show="motivoActivo">
+				<div class="form-group form-group-sm form-inline"
+					ng-show="motivoActivo">
 					<div class="form-group col-sm-12">
-						<label for="fechaMotivo" class="control-label pull-left">Fecha baja</label>
+						<label for="fechaMotivo" class="control-label pull-left">Fecha
+							baja</label>
 					</div>
-					<div class="form-group form-inline col-sm-12">
-			            <p class="input-group">
-			              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="infoAdministrativa.fechaMotivo" is-open="openedFechaMotivo" max-date="maxDate" datepicker-options="dateOptions" ng-required="true" clear-text="Borrar" current-text="Hoy" close-text="Cerrar" disabled/>
-			              <span class="input-group-btn">
-			                <button type="button" class="btn btn-default" ng-click="openFechaMotivo($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-			              </span>
-			            </p>
+					<div
+						class="form-group form-inline col-sm-12 input-group input-group-sm">
+						<p class="input-group input-group-sm">
+							<input type="text" class="form-control"
+								datepicker-popup="{{format}}"
+								ng-model="infoAdministrativa.fechaMotivo"
+								is-open="openedFechaMotivo" max-date="maxDate"
+								datepicker-options="dateOptions" ng-required="true"
+								clear-text="Borrar" current-text="Hoy" close-text="Cerrar"
+								disabled /> <span class="input-group-btn">
+								<button type="button" class="btn btn-default"
+									ng-click="openFechaMotivo($event)">
+									<i class="glyphicon glyphicon-calendar"></i>
+								</button>
+							</span>
+						</p>
 					</div>
 				</div>
-			</div>		
+			</div>
 		</div>
 		<!-- Tipo de Estado Contractual, N° Expediente y Resolucion -->
 		<div class="row">
 			<div class="col-sm-4">
-				<div class="form-group">
-					<label>Estado Contractual</label>
-					<select class="form-control" ng-change="activarExpedienteResolucion(tipoEstadoContractualSel)" ng-options="tipo.nombre for tipo in tiposEstadoContractual" required ng-model="tipoEstadoContractualSel" ng-init="listarTiposEstadoContractual()">
+				<div class="form-group form-group-sm">
+					<label>Estado Contractual</label> <select class="form-control"
+						ng-change="activarExpedienteResolucion(tipoEstadoContractualSel)"
+						ng-options="tipo.nombre for tipo in tiposEstadoContractual"
+						required ng-model="tipoEstadoContractualSel"
+						ng-init="listarTiposEstadoContractual()">
 						<option value="">-- Tipo de Estado Contractual --</option>
 					</select>
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<div class="form-group" ng-show="nroExpedienteActivo">
-					<label for="nroExpe">N° Expediente</label>
-					<input type="text" class="form-control" id="nroExpe" name="nroExpe" ng-model="infoAdministrativa.nroExpe" placeholder="N° Expediente">
+				<div class="form-group form-group-sm" ng-show="nroExpedienteActivo">
+					<label for="nroExpe">N° Expediente</label> <input type="text"
+						class="form-control" id="nroExpe" name="nroExpe"
+						ng-model="infoAdministrativa.nroExpe" placeholder="N° Expediente">
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<div class="form-group" ng-show="nroResolucionActivo">
-					<label for="nroResol">N° Resolucion</label>
-					<input type="text" class="form-control" id="nroResol" name="nroResol" ng-model="infoAdministrativa.nroResol" placeholder="N° Resolucion">
+				<div class="form-group form-group-sm" ng-show="nroResolucionActivo">
+					<label for="nroResol">N° Resolucion</label> <input type="text"
+						class="form-control" id="nroResol" name="nroResol"
+						ng-model="infoAdministrativa.nroResol"
+						placeholder="N° Resolucion">
 				</div>
 			</div>
 		</div>
@@ -127,43 +164,50 @@
 					<h4 class="panel-title">Documentacion Entregada</h4>
 				</div>
 				<div class="panel-body bg-warning">
-					<div class="checkbox">
-						<label>
-						  <input type="checkbox" value="" ng-model="infoAdministrativa.ddjj"> Declaración Jurada
-						</label>
-					</div>
-					<div class="checkbox">
-						<label>
-						  <input type="checkbox" value="" ng-model="infoAdministrativa.fotoDoc"> Fotocopia DNI
-						</label>
-					</div>
-					<div class="checkbox">
-						<label>
-						  <input type="checkbox" value="" ng-model="infoAdministrativa.cuil"> CUIL
-						</label>
-					</div>
-					<div class="checkbox">
-						<label>
-						  <input type="checkbox" value="" ng-model="infoAdministrativa.cv"> CV
-						</label>
-					</div>
-					<div class="checkbox">
-						<label>
-						  <input type="checkbox" value="" ng-model="infoAdministrativa.titulos"> Titulos
-						</label>
-					</div>
-					<div class="checkbox">
-						<label>
-						  <input type="checkbox" value="" ng-model="infoAdministrativa.certAnte"> Certificado de Antecedentes
-						</label>
-					</div>
-					<div class="checkbox">
-						<label>
-						  <input type="checkbox" value="" ng-model="infoAdministrativa.certReinc"> Certificado de Reincidencia
-						</label>
+					<div class="input-group input-group-sm">
+						<div class="checkbox">
+							<label> <input type="checkbox" value=""
+								ng-model="infoAdministrativa.ddjj"> Declaración Jurada
+							</label>
+						</div>
+						<div class="checkbox">
+							<label> <input type="checkbox" value=""
+								ng-model="infoAdministrativa.fotoDoc"> Fotocopia DNI
+							</label>
+						</div>
+						<div class="checkbox">
+							<label> <input type="checkbox" value=""
+								ng-model="infoAdministrativa.cuil"> CUIL
+							</label>
+						</div>
+						<div class="checkbox">
+							<label> <input type="checkbox" value=""
+								ng-model="infoAdministrativa.cv"> CV
+							</label>
+						</div>
+						<div class="checkbox">
+							<label> <input type="checkbox" value=""
+								ng-model="infoAdministrativa.titulos"> Titulos
+							</label>
+						</div>
+						<div class="checkbox">
+							<label> <input type="checkbox" value=""
+								ng-model="infoAdministrativa.certAnte"> Certificado de
+								Antecedentes
+							</label>
+						</div>
+						<div class="checkbox">
+							<label> <input type="checkbox" value=""
+								ng-model="infoAdministrativa.certReinc"> Certificado de
+								Reincidencia
+							</label>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="panel-footer bg-danger">
+		<button type="submit" class="btn btn-primary" ng-click="guardar()">Guardar</button>
 	</div>
 </div>
